Added orders, fixed bugs, booking confimation

--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -55,6 +55,12 @@
               <ul class="navbar-nav ml-auto">
                     {% if request.session.uid != "" and request.session.uid != NULL %}
                         {% if request.session.utype == "Customer" %}
+                        {% if request.session.bookings != "" and request.session.bookings != NULL %}
+                        <li class="nav-item">
+                                <a class="nav-link" href="/booking">Current Order</a>
+                            </li>
+
+                        {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link" href="/profile">Profile</a>
                             </li>
