--- a/carrentalsystem/crcapp/templates/public/booking.html
+++ b/carrentalsystem/crcapp/templates/public/booking.html
@@ -21,8 +21,8 @@
                     <h6>Return Date: {{ returnDate }} </h6>
             </div>
             <div class="col-md-6">
-                    <div class="btn btn-success">Confirm Order</div>
-                    <div class="btn btn-danger">Cancel Order</div>
+                    <div class="btn btn-success" id="confirmOrder">Confirm Order</div>
+                    <div class="btn btn-danger" id="cancelOrder">Cancel Order</div>
             </div>
             
         </div>
@@ -37,7 +37,7 @@
                                                 <p><small>Model:</small> {{ item.model | title   | truncatechars:10}}</p>
                                                 <p><small>Series:</small> {{ item.series | title  | truncatechars:10 }}</p>
                                                 <p><small>Year:</small> {{ item.year }}</p>
-                                                 <a href="/vehicle/{{ item.vehicleID }}" target="_blank"> <p>View More Details</p></a>                                
+                                                <a href="/vehicle/{{ item.vehicleID }}" target="_blank"> <p>View More Details</p></a>                                
                                                 <img src="static/images/carIcon.png" class="img-responsive img-center" width="50%">
                                                 <input type="button" class="btn btn-primary btn-sm addOrderBtn" data-id="{{ item.vehicleID }}" value="Add to order" />
                                         </div> 
@@ -69,8 +69,9 @@
         $(document).ready(function() {
             
           
-
+                $("#confirmOrder").hide();
            
+                $("#cancelOrder").hide();
               
         })
 
@@ -79,14 +80,46 @@
                 var id = $(this).data("id");
                 var link = "/booking/vehicle/"+id; 
                 $(this).val("Adding...");
-                
+                var btn = $(this);
                 $.ajax({
                         url: link,
                         type : 'POST',
                         success: function(result){
                         
                             if(result == "True"){
-                                $(this).val("Added");
+                                btn.val("Added");
+                                $(".addOrderBtn").addClass("disabled");
+                                $("#confirmOrder").show();
+           
+                                $("#cancelOrder").show();
+                            }
+                            
+                        }});
+        })
+
+        $("#confirmOrder").click(function() {
+                
+                $.ajax({
+                        url: '/booking/confirm',
+                        type : 'POST',
+                        success: function(result){
+                        
+                            if(result == "True"){
+                                window.location.replace("/profile");
+                            }
+                            
+                        }});
+        })
+
+        $("#cancelOrder").click(function() {
+                
+                $.ajax({
+                        url: '/booking/cancel',
+                        type : 'POST',
+                        success: function(result){
+                        
+                            if(result == "True"){
+                                window.location.replace("/");
                             }
                             
                         }});
