--- a/carrentalsystem/crcapp/templates/public/profile.html
+++ b/carrentalsystem/crcapp/templates/public/profile.html
@@ -177,7 +177,7 @@
                                     <label for="DOB" class="col-sm-3 col-form-label">Date Of Birth</label>
                                     <div class="col-sm-7 mb-2">
                                         <input data-date-format="yyyy-mm-dd" class="form-control"
-                                        id="datepicker" placeholder="yyyy-mm-dd" name="dob" value="{{ customer.DOB |date:'Y-m-d' }}" required>
+                                        id="datepicker" placeholder="yyyy-mm-dd" name="DOB" value="{{ customer.DOB |date:'Y-m-d' }}" required>
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -278,7 +278,7 @@
                 autoclose: true,
                 todayHighlight: true,
             });
-            $("#pwsave").addClass("disabled");
+            $("#pwsave").hide();
 
            
               
@@ -286,10 +286,10 @@
         $("#confpassword").change(function(){
             if($("#password").val() != $("#confpassword").val()){
                 $("#alertPW").html("Sorry, the passwords do not match.");
-                $("#pwsave").addClass("disabled");
+                $("#pwsave").hide();
             }else{
                 $("#alertPW").html("");
-                $("#pwsave").removeClass("disabled");
+                $("#pwsave").show();
             }
         })
   </script>
