--- a/carrentalsystem/crcapp/templates/public/booking.html
+++ b/carrentalsystem/crcapp/templates/public/booking.html
@@ -21,8 +21,12 @@
                     <h6>Return Date: {{ returnDate }} </h6>
             </div>
             <div class="col-md-6">
+                        {% if request.session.bookings != "" and request.session.bookings != NULL %}
+                        <a href="/login" class="btn btn-primary ml-5">Please Login</a>
+                        {% else %}
                     <div class="btn btn-success" id="confirmOrder">Confirm Order</div>
                     <div class="btn btn-danger" id="cancelOrder">Cancel Order</div>
+                    {% endif %}
             </div>
             
         </div>
