--- a/carrentalsystem/crcapp/templates/public/index.html
+++ b/carrentalsystem/crcapp/templates/public/index.html
@@ -60,7 +60,7 @@
               <div class="row justify-content-center mt-5">
                   <div class="col-md-3">
                       <div class="form-group">
-                          <input type="submit" class="btn btn-flat btn-primary pl-5 pr-5" id="selectBtn" value="SELECT" />
+                          <input type="submit" class="btn btn-flat btn-primary divs-center" id="selectBtn" value="SELECT" />
                         </div>
                   </div>
              
