--- a/carrentalsystem/crcapp/templates/public/booking.html
+++ b/carrentalsystem/crcapp/templates/public/booking.html
@@ -21,12 +21,14 @@
                     <h6>Return Date: {{ returnDate }} </h6>
             </div>
             <div class="col-md-6">
-                        {% if request.session.bookings != None  %}
-                        <a href="/login" class="btn btn-primary ml-5">Please Login</a>
+                        {% if request.session.uid != "" and request.session.uid != NULL  %}
+                           
+                        <div class="btn btn-success" id="confirmOrder">Confirm Order</div>
+                        <div class="btn btn-danger" id="cancelOrder">Cancel Order</div>
                         {% else %}
-                    <div class="btn btn-success" id="confirmOrder">Confirm Order</div>
-                    <div class="btn btn-danger" id="cancelOrder">Cancel Order</div>
-                    {% endif %}
+                        <a href="/login" class="btn btn-primary ml-5">Please Login</a>
+                     
+                        {% endif %}
             </div>
             
         </div>
