Fixed booking button

--- a/carrentalsystem/crcapp/templates/public/booking.html
+++ b/carrentalsystem/crcapp/templates/public/booking.html
@@ -95,7 +95,7 @@
                         
                             if(result == "True"){
                                 btn.val("Added");
-                                $(".addOrderBtn").addClass("disabled");
+                                $(".addOrderBtn").attr("disabled", "true");
                                 $("#confirmOrder").show();
            
                                 $("#cancelOrder").show();
