base.html edited online with Bitbucket

--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -73,18 +73,12 @@
                        <div id="bk" class="collapse" aria-labelledby="Bookings" data-parent="#accordion">
                       
                     <li class="nav-item">
-                      <a class="nav-link" href="/management/booking/order">
+                      <a class="nav-link" href="/management/booking/viewBooking">
                         <span><i class="fas fa-shopping-cart"></i></span>
-                        Book Vehicles
+                        View Bookings
                       </a>
                     </li>
                       
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fas fa-search-plus"></i></span>
-                        Inspections
-                      </a>
-                    </li>
                   </div>
                     <p class="pl-2 font-black  sideNavColp flex" data-toggle="collapse" data-target="#vm" aria-expanded="true" aria-controls="vm" >
                         <small class="pr-2">Vehicle Management</small>               
