base.html edited online with Bitbucket

--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -112,7 +112,7 @@
                       </li>
       
                       <li class="nav-item">
-                          <a class="nav-link" href="#">
+                          <a class="nav-link" href="/management/customer">
                             <span><i class="fas fa-eye"></i></span>
                             View Customers
                           </a>
