--- a/carrentalsystem/crcapp/templates/staff/staffdetailview.html
+++ b/carrentalsystem/crcapp/templates/staff/staffdetailview.html
@@ -43,7 +43,7 @@
                 </div>
                 <form action="/management/staff/id/{{ employee.employeeID}}" method="POST">
                     {% csrf_token %}
-                    <input type="hidden" name="empID" value="{{ employee.employeeID }}" />
+                    <input type="hidden" name="employeeID" value="{{ employee.employeeID }}" />
             <div class="row justify-content-end mb-4">
                 <div class="col-md-4">
                     <input type="submit" name="modify" value="Save Changes" class="btn btn-flat btn-primary" /> 
