--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -45,7 +45,7 @@
               </ul>
           </div>
           <div class="mx-auto order-0">
-              <a class="navbar-brand mx-auto" href="#">Car Rental Service</a>
+              <a class="navbar-brand mx-auto">Car Rental Service</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                   <span class="fas fa-bars font-blue"></span>
                
